--- a/Chinook_database/Chinook_queries.ipynb
+++ b/Chinook_database/Chinook_queries.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
     "import urllib.request\n",
     "import pandas as pd\n",
-    "# Download database\n",
-    "url = \"https://github.com/lerocha/chinook-database/raw/master/ChinookDatabase/DataSources/Chinook_Sqlite.sqlite\"\n",
-    "urllib.request.urlretrieve(url, \"chinook.db\") \n",
     "\n",
-    "# Connect\n",
-    "conn = sqlite3.connect(\"chinook.db\")\n",
+    "url = \"https://github.com/lerocha/chinook-database/raw/master/ChinookDatabase/DataSources/Chinook_Sqlite.sqlite\"\n",
+    "urllib.request.urlretrieve(url, \"Chinook.sqlite\")\n",
+    "\n",
+    "conn = sqlite3.connect(\"Chinook.sqlite\")\n",
     "cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +117,7 @@
        "10          Track"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -200,19 +199,19 @@
     "# 2. Try some queries to verify that the tables and relations are working.\n",
     "print(\"\\n--- Verifying Queries ---\")\n",
     "\n",
-    "# Query 1: Get all artists\n",
+    "\n",
     "query1 = \"SELECT * FROM Artist LIMIT 5;\"\n",
     "df1 = pd.read_sql_query(query1, conn)\n",
     "print(\"\\nFirst 5 Artists:\")\n",
     "print(df1)\n",
     "\n",
-    "# Query 2: Get all tracks\n",
+    "\n",
     "query2 = \"SELECT * FROM Track LIMIT 5;\"\n",
     "df2 = pd.read_sql_query(query2, conn)\n",
     "print(\"\\nFirst 5 Tracks:\")\n",
     "print(df2)\n",
     "\n",
-    "# Query 3: Get all customers from USA\n",
+    "\n",
     "query3 = \"SELECT * FROM Customer WHERE Country = 'USA' LIMIT 5;\"\n",
     "df3 = pd.read_sql_query(query3, conn)\n",
     "print(\"\\nFirst 5 Customers from USA:\")\n",
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +264,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Timing Unindexed Join Query (10 Runs) ---\n",
+      "Unindexed join average time: 0.0006 seconds\n",
+      "Individual times: [0.0012, 0.0007, 0.0005, 0.0006, 0.0004, 0.0005, 0.0005, 0.0005, 0.0004, 0.0005]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n--- Timing Unindexed Join Query (10 Runs) ---\")\n",
+    "\n",
+    "# First, drop indexes that would normally optimize these joins\n",
+    "cursor.executescript(\"\"\"\n",
+    "DROP INDEX IF EXISTS IFK_CustomerInvoice;\n",
+    "DROP INDEX IF EXISTS IFK_InvoiceLineInvoiceId;\n",
+    "DROP INDEX IF EXISTS IFK_InvoiceLineTrackId;\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
+    "# Define our unindexed join query (same as query5 but now without index benefits)\n",
+    "unindexed_query = \"\"\"\n",
+    "SELECT c.FirstName, c.LastName, i.InvoiceDate, t.Name AS TrackName\n",
+    "FROM Customer c\n",
+    "JOIN Invoice i ON c.CustomerId = i.CustomerId\n",
+    "JOIN InvoiceLine ii ON i.InvoiceId = ii.InvoiceId\n",
+    "JOIN Track t ON ii.TrackId = t.TrackId\n",
+    "LIMIT 10;\n",
+    "\"\"\"\n",
+    "\n",
+    "# Time the unindexed query\n",
+    "times_unindexed = []\n",
+    "for _ in range(10):\n",
+    "    # Vary the limit to avoid cache effects\n",
+    "    current_limit = random.randint(5, 15)\n",
+    "    varied_query = unindexed_query.replace('LIMIT 10', f'LIMIT {current_limit}')\n",
+    "    \n",
+    "    start_time = time.time()\n",
+    "    df_unindexed = pd.read_sql_query(varied_query, conn)\n",
+    "    end_time = time.time()\n",
+    "    times_unindexed.append(end_time - start_time)\n",
+    "\n",
+    "\n",
+    "cursor.executescript(\"\"\"\n",
+    "CREATE INDEX IF NOT EXISTS IFK_CustomerInvoice ON Invoice(CustomerId);\n",
+    "CREATE INDEX IF NOT EXISTS IFK_InvoiceLineInvoiceId ON InvoiceLine(InvoiceId);\n",
+    "CREATE INDEX IF NOT EXISTS IFK_InvoiceLineTrackId ON InvoiceLine(TrackId);\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
+    "\n",
+    "print(f\"Unindexed join average time: {sum(times_unindexed)/len(times_unindexed):.4f} seconds\")\n",
+    "print(f\"Individual times: {[round(t, 4) for t in times_unindexed]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +335,7 @@
      "text": [
       "\n",
       "--- Timing Unindexed Query (10 Runs) ---\n",
-      "Average time: 0.0006594419479370117 seconds\n"
+      "Average time: 0.0008382558822631836 seconds\n"
      ]
     }
    ],
@@ -284,6 +345,15 @@
     "import time\n",
     "import random\n",
     "times = []\n",
+    "\n",
+    "query5 = \"\"\"\n",
+    "SELECT c.FirstName, c.LastName, i.InvoiceDate, t.Name AS TrackName\n",
+    "FROM Customer c\n",
+    "JOIN Invoice i ON c.CustomerId = i.CustomerId\n",
+    "JOIN InvoiceLine ii ON i.InvoiceId = ii.InvoiceId\n",
+    "JOIN Track t ON ii.TrackId = t.TrackId\n",
+    "LIMIT 10;\n",
+    "\"\"\"\n",
     "for _ in range(10):\n",
     "    start_time = time.time()\n",
     "    df5 = pd.read_sql_query(query5, conn)\n",
@@ -297,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,19 +381,27 @@
    ],
    "source": [
     "# 6. Create some index capabilities for the tables that will speed up the queries.\n",
+    "\n",
     "print(\"\\n--- Creating Indexes ---\")\n",
     "\n",
-    "cursor.execute(\"CREATE INDEX idx_CustomerId ON Customer (CustomerId);\")\n",
-    "cursor.execute(\"CREATE INDEX idx_InvoiceId ON Invoice (InvoiceId);\")\n",
-    "cursor.execute(\"CREATE INDEX idx_TrackId ON Track (TrackId);\")\n",
-    "cursor.execute(\"CREATE INDEX idx_InvoiceLine_InvoiceId ON InvoiceLine (InvoiceId);\")\n",
-    "cursor.execute(\"CREATE INDEX idx_InvoiceLine_TrackId ON InvoiceLine (TrackId);\")\n",
-    "conn.commit()"
+    "cursor.executescript(\"\"\"\n",
+    "CREATE INDEX IF NOT EXISTS idx_CustomerId ON Customer(CustomerId);\n",
+    "CREATE INDEX IF NOT EXISTS idx_InvoiceId ON Invoice(InvoiceId);\n",
+    "CREATE INDEX IF NOT EXISTS idx_TrackId ON Track(TrackId);\n",
+    "CREATE INDEX IF NOT EXISTS idx_InvoiceLine_InvoiceId ON InvoiceLine(InvoiceId);\n",
+    "CREATE INDEX IF NOT EXISTS idx_InvoiceLine_TrackId ON InvoiceLine(TrackId);\n",
+    "\n",
+    "-- Additional indexes that might help with our specific query\n",
+    "CREATE INDEX IF NOT EXISTS idx_Customer_Country ON Customer(Country);\n",
+    "CREATE INDEX IF NOT EXISTS idx_Invoice_CustomerId ON Invoice(CustomerId);\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +410,7 @@
      "text": [
       "\n",
       "--- Timing Indexed Query (10 Runs) ---\n",
-      "Average time (indexed): 0.0006251335144042969 seconds\n"
+      "Average time (indexed): 0.0006811857223510742 seconds\n"
      ]
     }
    ],
@@ -362,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
