--- a/toppic-01-db-api/db-api.ipynb
+++ b/toppic-01-db-api/db-api.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection = sqlite3.connect(\"pets.db\")\n",
+    "connection = sqlite3.connect(\"pets.csv\"\"\")\n",
     "cursor = connection.cursor()"
    ]
   },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,15 @@
       "(1, 'dorothy', 'dog', 9, 'greg')\n",
       "(2, 'suzy', 'dog', 9, 'greg')\n",
       "(3, 'casey', 'dog', 9, 'greg')\n",
-      "(4, 'heidi', 'dog', 9, 'greg')\n"
+      "(4, 'heidi', 'dog', 9, 'greg')\n",
+      "(8, 'dorothy', 'dog', 9, 'greg')\n",
+      "(9, 'suzy', 'dog', 9, 'greg')\n",
+      "(10, 'casey', 'dog', 9, 'greg')\n",
+      "(11, 'heidi', 'dog', 9, 'greg')\n",
+      "(15, 'dorothy', 'dog', 9, 'greg')\n",
+      "(16, 'suzy', 'dog', 9, 'greg')\n",
+      "(17, 'casey', 'dog', 9, 'greg')\n",
+      "(18, 'heidi', 'dog', 9, 'greg')\n"
      ]
     }
    ],
@@ -111,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
